apps/smart-asset-manager/backend.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: backend
  namespace: smart-asset-manager
spec:
  replicas: 2
  strategy:
    canary:
      canaryService: backend-canary
      stableService: backend-stable
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: smart-asset-manager-route
            namespace: smart-asset-manager
      steps:
        - setWeight: 10
        - pause: { duration: 30s }
        - setWeight: 25
        - pause: { duration: 30s }
        - setWeight: 50
        - pause: { duration: 30s }
        - setWeight: 100
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: master212/mosalam-backend:v1
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "150m"
              memory: "128Mi"
            limits:
              cpu: "400m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
