apps/smart-asset-manager/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: smart-asset-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: master212/mosalam-auth-service:v1
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "150m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: smart-asset-manager
spec:
  selector:
    app: auth-service
  ports:
    - port: 4000
      targetPort: 4000
